# splinter-mypy

./: MANIFEST.in  README.md  messages.json  mypy.ini  pyproject.toml  requirements.txt  splinter.py
splinter/: __init__.py  __main__.py  analyzer.py  mypy.ini  plugin.py  visitor.py
tests/: test_django_plugin.py
