[project]
name = "splinter"
version = "0.1.0"
dependencies = [
    "mypy", "django-stubs", "django-filter-stubs",
    # These dependencies are required for the repositories to be analyzed, and not
    # this repository itself.
    "vstutils", "easy-thumbnails"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"